Fixed spacing on mobile bug, Changed wording of last profile graph

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -282,3 +282,9 @@ svg {
 .one-line{
     white-space:nowrap;
 }
+
+#profile-name{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
